2010-07-23  Robert Larice
  * src/include/smpdefs.h ,
  * src/include/spmatrix.h :
    better place for the prototype of spConstMult()

2010-07-23  Robert Larice
 * src/ciderlib/oned/onecont.c ,
 * src/ciderlib/oned/onepoiss.c ,
 * src/ciderlib/twod/twocont.c ,
 * src/ciderlib/twod/twoncont.c ,
 * src/ciderlib/twod/twopcont.c ,
 * src/ciderlib/twod/twopoiss.c :
    use the type SMPmatrix instead of char *
    remove some redundant forward function declarations
    remove some redundant nested function declarations

2010-07-23  Robert Larice
 * src/ngmultidec.c ,
 * src/include/onedev.h ,
 * src/include/smpdefs.h ,
 * src/include/spmatrix.h ,
 * src/include/twodev.h ,
 * src/maths/sparse/spalloc.c ,
 * src/maths/sparse/spbuild.c ,
 * src/maths/sparse/spdefs.h ,
 * src/maths/sparse/spfactor.c ,
 * src/maths/sparse/spoutput.c ,
 * src/maths/sparse/spsmp.c ,
 * src/maths/sparse/spsolve.c ,
 * src/maths/sparse/sputils.c ,
 * src/spicelib/analysis/cktacct.c :
    use the types MatrixPtr and SMPmatrix instead of void and char *
      both are the same thing,
        MatrixPtr is used inside the sparse/* domain,
        SMPmatrix is used in the rest of spice
    remove casts, which are no longer necessary

2010-07-23  Robert Larice
 * src/include/spmatrix.h ,
 * src/maths/sparse/spbuild.c ,
 * src/maths/sparse/spdefs.h :
    use a void* instead of a char* for anonymous `InitInfo' in src/sparse/*.c

2010-07-23  Robert Larice
 * src/maths/sparse/sputils.c :
    convert K&R function definitions to ansi style

2010-07-20  Robert Larice
 * src/frontend/com_option.c ,
 * src/frontend/com_set.c ,
 * src/frontend/com_strcmp.c ,
 * src/frontend/cpitf.c ,
 * src/frontend/dotcards.c ,
 * src/frontend/init.c ,
 * src/frontend/inp.c ,
 * src/frontend/variable.c ,
 * src/frontend/variable.h ,
 * src/frontend/wdisp/windisp.c ,
 * src/include/cpextern.h :
    use a void * for the third argument (&value) of the cp_vset() function
      (polymorphic, has been claimed to be char *)
