@@ -75,7 +75,7 @@ c_tan(complex *cc, int length)
 }
 
 void *
-cx_tan(void *data, short int type, int length, int *newlength, short int *newtype, ...)
+cx_tan(void *data, short int type, int length, int *newlength, short int *newtype)
 {
     *newlength = length;
     if (type == VF_REAL) {
@@ -90,7 +90,7 @@ cx_tan(void *data, short int type, int length, int *newlength, short int *newtyp
 
 
 void *
-cx_atan(void *data, short int type, int length, int *newlength, short int *newtype, ...)
+cx_atan(void *data, short int type, int length, int *newlength, short int *newtype)
 {
     double *d;
 
@@ -140,7 +140,7 @@ cx_max_local(void *data, short int type, int length)
 /* Normalize the data so that the magnitude of the greatest value is 1. */
 
 void *
-cx_norm(void *data, short int type, int length, int *newlength, short int *newtype, ...)
+cx_norm(void *data, short int type, int length, int *newlength, short int *newtype)
 {
     double largest = 0.0;
 
@@ -179,7 +179,7 @@ cx_norm(void *data, short int type, int length, int *newlength, short int *newty
 }
 
 void *
-cx_uminus(void *data, short int type, int length, int *newlength, short int *newtype, ...)
+cx_uminus(void *data, short int type, int length, int *newlength, short int *newtype)
 {
     *newlength = length;
     if (type == VF_COMPLEX) {
@@ -208,7 +208,7 @@ cx_uminus(void *data, short int type, int length, int *newlength, short int *new
 }
 
 void *
-cx_rnd(void *data, short int type, int length, int *newlength, short int *newtype, ...)
+cx_rnd(void *data, short int type, int length, int *newlength, short int *newtype)
 {
     *newlength = length;
     checkseed();
@@ -248,7 +248,7 @@ cx_rnd(void *data, short int type, int length, int *newlength, short int *newtyp
    Created by A.M.Roldan 2005-05-21  */
    
 void 
-*cx_avg(void *data, short int type, int length, int *newlength, short int *newtype, ...)
+*cx_avg(void *data, short int type, int length, int *newlength, short int *newtype)
 {
     complex *c;
     double *d = NULL, sum_real = 0.0,sum_imag = 0.0;
@@ -292,7 +292,7 @@ void
 /* Compute the mean of a vector. */
 
 void *
-cx_mean(void *data, short int type, int length, int *newlength, short int *newtype, ...)
+cx_mean(void *data, short int type, int length, int *newlength, short int *newtype)
 {
     *newlength = 1;
     rcheck(length > 0, "mean");
@@ -326,7 +326,7 @@ cx_mean(void *data, short int type, int length, int *newlength, short int *newty
 
 
 void *
-cx_length(void *data, short int type, int length, int *newlength, short int *newtype, ...)
+cx_length(void *data, short int type, int length, int *newlength, short int *newtype)
 {
     double *d;
 
@@ -343,7 +343,7 @@ cx_length(void *data, short int type, int length, int *newlength, short int *new
 
 
 void *
-cx_vector(void *data, short int type, int length, int *newlength, short int *newtype, ...)
+cx_vector(void *data, short int type, int length, int *newlength, short int *newtype)
 {
     complex *cc = (complex *) data;
     double *dd = (double *) data;
@@ -368,7 +368,7 @@ cx_vector(void *data, short int type, int length, int *newlength, short int *new
 
 
 void *
-cx_unitvec(void *data, short int type, int length, int *newlength, short int *newtype, ...)
+cx_unitvec(void *data, short int type, int length, int *newlength, short int *newtype)
 {
     complex *cc = (complex *) data;
     double *dd = (double *) data;
@@ -398,7 +398,7 @@ cx_unitvec(void *data, short int type, int length, int *newlength, short int *ne
  */
 
 void *
-cx_plus(void *data1, void *data2, short int datatype1, short int datatype2, int length, ...)
+cx_plus(void *data1, void *data2, short int datatype1, short int datatype2, int length)
 {
     double *dd1 = (double *) data1;
     double *dd2 = (double *) data2;
@@ -438,7 +438,7 @@ cx_plus(void *data1, void *data2, short int datatype1, short int datatype2, int 
 }
 
 void *
-cx_minus(void *data1, void *data2, short int datatype1, short int datatype2, int length, ...)
+cx_minus(void *data1, void *data2, short int datatype1, short int datatype2, int length)
 {
     double *dd1 = (double *) data1;
     double *dd2 = (double *) data2;
@@ -478,7 +478,7 @@ cx_minus(void *data1, void *data2, short int datatype1, short int datatype2, int
 }
 
 void *
-cx_times(void *data1, void *data2, short int datatype1, short int datatype2, int length, ...)
+cx_times(void *data1, void *data2, short int datatype1, short int datatype2, int length)
 {
     double *dd1 = (double *) data1;
     double *dd2 = (double *) data2;
@@ -520,7 +520,7 @@ cx_times(void *data1, void *data2, short int datatype1, short int datatype2, int
 }
 
 void *
-cx_mod(void *data1, void *data2, short int datatype1, short int datatype2, int length, ...)
+cx_mod(void *data1, void *data2, short int datatype1, short int datatype2, int length)
 {
     double *dd1 = (double *) data1;
     double *dd2 = (double *) data2;
@@ -579,7 +579,7 @@ cx_mod(void *data1, void *data2, short int datatype1, short int datatype2, int l
 /* Routoure JM : Compute the max of a vector. */
 
 void *
-cx_max(void *data, short int type, int length, int *newlength, short int *newtype, ...)
+cx_max(void *data, short int type, int length, int *newlength, short int *newtype)
 {
     *newlength = 1;
     /* test if length >0 et affiche un message d'erreur */
@@ -620,7 +620,7 @@ cx_max(void *data, short int type, int length, int *newlength, short int *newtyp
 /* Routoure JM : Compute the min of a vector. */
 
 void *
-cx_min(void *data, short int type, int length, int *newlength, short int *newtype, ...)
+cx_min(void *data, short int type, int length, int *newlength, short int *newtype)
 {
     *newlength = 1;
     /* test if length >0 et affiche un message d'erreur */
@@ -663,7 +663,7 @@ cx_min(void *data, short int type, int length, int *newlength, short int *newtyp
 /* Routoure JM : Compute the differential  of a vector. */
 
 void *
-cx_d(void *data, short int type, int length, int *newlength, short int *newtype, ...)
+cx_d(void *data, short int type, int length, int *newlength, short int *newtype)
 {
     *newlength = length;
     /* test if length >0 et affiche un message d'erreur */
