@@ -1,3 +1,12 @@
+2010-07-24  Robert Larice
+ * src/frontend/evaluate.c ,
+ * src/frontend/parse.c ,
+ * src/include/fteext.h ,
+ * src/include/fteparse.h ,
+ * src/maths/cmaths/cmath2.c ,
+ * src/maths/cmaths/cmath2.h :
+    fix the type signature of the cx_* functions
+
 2010-07-23  Robert Larice
   * src/include/smpdefs.h ,
   * src/include/spmatrix.h :
